story view and status tags

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -4,8 +4,7 @@
 @import 'base/base';
 @import 'layout/layout';
 
-@import 'modules/lanes';
-@import 'modules/notes';
 @import 'modules/tasks';
 @import 'modules/stories';
 @import 'modules/columns';
+@import 'modules/tags';
