--- a/src/stylesheets/layout/_layout.scss
+++ b/src/stylesheets/layout/_layout.scss
@@ -5,15 +5,6 @@
 
 }
 
-.app-title {
-  border-bottom: 1px solid rgba($gray-light, .2);
-  border-top: 2px solid $primary;
-  font-weight: 400;
-  margin-bottom: .5em;
-  padding: .5em 1em;
-  text-align: left;
-}
-
 .kanban {
     margin-right: 300px;
 }
@@ -29,5 +20,14 @@
 }
 
 .container {
-    padding: 50px;
+    padding: 20px 50px;
+}
+
+.tab-wrap {
+
+    .tab {
+        display: inline-block;
+        padding: 5px 10px;
+        margin: 5px;
+    }
 }
