--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'third-party/bootstrap';
+@import 'third-party/font-awesome/scss/font-awesome';
 
 @import 'base/base';
 @import 'layout/layout';
