--- a/src/stylesheets/modules/_tags.scss
+++ b/src/stylesheets/modules/_tags.scss
@@ -2,15 +2,16 @@
     display: inline-block;
     position: absolute;
     text-align: right;
-    top: 5px;
-    right: 50px;
+    top: 6px;
+    right: 25px;
 }
 
 .tag {
     display: inline-block;
     color: #fff;
-    width: 50px;
+    width: 60px;
     text-align: center;
-    border-radius: 5px;
-    font-size: 12px;
+    border-radius: 3px;
+    font-size: 13px;
+    padding: 1px 0;
 }
