--- a/src/stylesheets/modules/_tasks.scss
+++ b/src/stylesheets/modules/_tasks.scss
@@ -5,12 +5,12 @@
 .task {
     background: #fff;
     border: 1px solid #ddd;
-    padding: 5px 10px;
+    padding: 7px 10px;
     position: relative;
     min-height: 50px;
 
     &:hover {
-        .edit {
+        .fa-pencil {
             display: block;
         }
     }
@@ -18,17 +18,26 @@
     &.dragging {
         background: #ddd;
         color: #ddd;
+        .tag-wrap {
+            display: none;
+        }
     }
 
     &.task-condensed {
-        min-height: auto!important;
+        min-height: auto;
     }
 
-    .edit {
+    .fa-pencil {
         display: none;
         position: absolute;
-        top: 5px;
-        right: 10px;
+        top: 12px;
+        right: 5px;
+        opacity: 0.5;
+        font-size: 12px;
+        cursor: pointer;
+        &:hover {
+            opacity: 1;
+        }
     }
 
     textarea:focus{
@@ -41,7 +50,9 @@
 
 .edit-menu {
     position: absolute;
-    right: -50px;
-    width: 50px;
+    z-index: 999;
+    background: #fff;
+    right: 5px;
+    padding: 5px 10px;
     border: 1px solid #ddd;
 }
