Color tabs and float add task button

--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -1,4 +1,4 @@
 // Colors
-$todo:      #7696e2;
-$testing:   #f7a258;
-$done:      #8bbf87;
+$todo:      #6b96fb;
+$testing:   #f99d4d;
+$done:      #73c66c;
