--- a/src/stylesheets/modules/_stories.scss
+++ b/src/stylesheets/modules/_stories.scss
@@ -16,7 +16,11 @@
     }
     .task-count {
         margin-left: 20px;
-        font-size: 12px;
+        font-size: 14px;
+    }
+
+    .add-button {
+        float:right;
     }
 
     input {
