--- a/src/stylesheets/layout/_layout.scss
+++ b/src/stylesheets/layout/_layout.scss
@@ -5,22 +5,28 @@
 
 }
 
-.kanban {
-    margin-right: 300px;
-}
-
 .container {
     padding: 20px 50px;
 }
 
 .tab-wrap {
     text-align: center;
+
     .tab {
         display: inline-block;
         padding: 5px 10px;
         margin: 5px;
         border-radius: 3px;
         cursor: pointer;
+
+        &:hover {
+            background: #ddd;
+        }
+
+        &.active {
+            background: $todo;
+            color: #fff;
+        }
     }
 
     i {
